# Kaast

./: .gitignore  .stylelintrc.json  CLAUDE.md  DEMARRAGE.md  LICENSE  NEXT_STEPS.md  README.md  SETTINGS_GUIDE.md  THIRD-PARTY-NOTICES  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: ci.yml
coverage/: lcov.info
coverage/lcov-report/: index.html
scripts/: download-ffmpeg.sh
src/: App.css  App.tsx  main.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/src/: error.rs  ffmpeg.rs  files.rs  gemini.rs  main.rs  pexels.rs  sidecar.rs  streaming.rs
src/components/: ApiKeySection.tsx  AudioPlayer.css  AudioPlayer.tsx  Controls.css  Controls.tsx  DebugConsole.css  DebugConsole.tsx  EditPage.css  EditPage.tsx  ErrorBoundary.tsx  Icons.tsx  MediaPreview.tsx  PodcastScriptGenerator.css  PodcastScriptGenerator.tsx  ProjectStartup.css  ProjectStartup.tsx  PublishPage.css  PublishPage.tsx  RemotionPreview.tsx  SceneCard.css  SceneCard.tsx  ScenesHeader.tsx  ScenesPage.css  ScenesPage.tsx  ScriptEditor.css  ScriptEditor.tsx  ScriptViewer.css  ScriptViewer.tsx  Settings.css  Settings.tsx  StyleEditor.css  StyleEditor.tsx  Timeline.css  Timeline.tsx  TimelineTrack.tsx  VideoModal.css  VideoModal.tsx  VideoPreview.css  VideoPreview.tsx
src/hooks/: useAsyncAction.ts  useMediaClips.ts  useMediaDuration.ts  usePlaybackSync.ts  useRemotionSync.ts  useResolvedUrls.ts  (+5 more)
(+72 files in other folders)
