[package]
name = "kaast"
version = "0.1.0"
description = "Kaast : un éditeur vidéo moderne pour Windows et macOS"
authors = ["vous"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.20"
base64 = "0.22"

[features]
custom-protocol = ["tauri/custom-protocol"]
