[package]
name = "kaast"
version = "0.1.0"
description = "Kaast: an AI-powered podcast editor for Windows, Linux, and macOS"
authors = ["vous"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-store = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.20"
base64 = "0.22"
axum = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
